--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ dist/bevy_lostskies_transcriber-7cbed6c413fa4296.js
 dist/favicon-f402c8741ce815ec.ico
 dist/index.html
 dist/manifest.json
+dist/bevy_lostskies_transcriber-574d62ca5d63b390_bg.wasm
+dist/bevy_lostskies_transcriber-574d62ca5d63b390.js
