--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,7 @@ edition = "2021"
 bevy = "0.13.0"
 bevy_pancam = {version = "0.11.0", features = ["bevy_egui"]}
 bevy_egui = "0.25"
-
-# native:
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.10"
-
-# web:
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4"
+wasm-bindgen = "0.2.91"
 
 
 [profile.release]
